--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git hub ripo</title>
+    <title>git hub ripo koi</title>
 </head>
 <body>
     <h1>dekhi</h1>
     <img src="gg.jpg" alt="" srcset="">
+    <div>
+        <h3>blog</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos repellendus a, reiciendis ipsum illum, ullam architecto asperiores iste illo dolor sapiente. Nobis sit facilis soluta, culpa nihil nam consectetur officia?</p>
+    </div>
 </body>
 </html>
