--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>dekhi</h1>
     <img src="gg.jpg" alt="" srcset="">
     <div>
-        <h3>blog</h3>
+        <h3>blog human 3</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos repellendus a, reiciendis ipsum illum, ullam architecto asperiores iste illo dolor sapiente. Nobis sit facilis soluta, culpa nihil nam consectetur officia?</p>
     </div>
 </body>
